fixed text alignment issue.

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 header{
     border: 3px;
     padding: 0px;
-    margin:10%;
+    margin:15%;
   
     
     
